# Wolf3D

./: .gitignore  CMakeLists.txt  Makefile  Makefile.inc  README.md  ReadMe.txt  test.c
frameworks/SDL2_image.framework/Versions/A/Headers/: SDL_image.h
include/: debug_log.h  define.h  raycast.h  rc_jtoc.h  stb_image.h  wolf3d.h
json/: config.json
libft/: CMakeLists.txt  Makefile  author  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isascii.c  ft_itoa_base.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnormdel.c  ft_lstnormdelone.c  ft_memalloc.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memset.c  ft_putchar.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putstr_fd.c  ft_sort_bubl.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdup.c  ft_strequ.c  ft_strjoin.c  ft_strncat.c  ft_strncpy.c  ft_strsplit.c  ft_strstr.c  ft_strsub.c  ft_strtrim.c  ft_swap.c  (+3 more)
libft/include/: get_next_line.h  libft.h
libft/src/: CMakeLists.txt  ft_abs.c  ft_atoi.c  ft_bzero.c  ft_clear_double_pointer.c  ft_fswap.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isstn.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstnormdel.c  ft_lstnormdelone.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_quick_sort.c  ft_segfault.c  (+34 more)
libjtoc/: CMakeLists.txt  LICENSE  Makefile
libjtoc/include/: libjtoc.h
libjtoc/src/: CMakeLists.txt  jtoc_get.c  jtoc_get_raw_data.c  jtoc_node.c  jtoc_parse.c  jtoc_parse_number.c  jtoc_parse_value.c  jtoc_read.c  jtoc_read_file.c  jtoc_utils.c  jtoc_utils2.c  jtoc_validate.c  jtoc_validate_value.c  jtoc_write.c
maps/: map_01  map_02  map_03
sdl2-cmake-modules/: FindSDL2.cmake
src/: CMakeLists.txt  draw_interface.c  draw_loop.c  draw_objects.c  init.c  main.c  main_loop.c  map_read.c  physic_loop.c  physics.c  player_raycast.c  raycast_and_draw.c  raycast_helper.c  screaming_control.c  sound.c
src/jtoc/: CMakeLists.txt  init.c  jtoc_config_from_json.c  map_read.c  rc_jtoc_get_map.c  rc_jtoc_get_obj.c  rc_jtoc_get_textures.c  rc_jtoc_get_wall_obj.c  rc_jtoc_main_from_json.c  rc_jtoc_obj_utilits.c  rc_jtoc_utilits.c  rc_jtoc_win_from_json.c  setup_game_from_json.c
src/rc_jtoc/: CMakeLists.txt  rc_jtoc_get_default_walls.c  rc_jtoc_get_map.c  rc_jtoc_get_obj.c  rc_jtoc_get_objects.c  rc_jtoc_get_player.c  rc_jtoc_get_textures.c  rc_jtoc_get_wall_obj.c  rc_jtoc_get_walls.c  rc_jtoc_main_from_json.c  rc_jtoc_obj_utilits.c  rc_jtoc_processing_map.c  rc_jtoc_utilits.c  rc_jtoc_win_from_json.c
src/rc_utilits/: utilits.c
src/utilits/: CMakeLists.txt  utilits.c
srcs/: draw_interface.c  init.c  main.c  main_loop.c  map_read.c  physics.c  player_movement.c  player_raycast.c  pseudo_three_d_render.c  texture_load.c  utilits.c
textures/: WALL68.bmp~
